fix: fixed alignment of categories title

--- a/src/components/CategoriesProduct/CategoriesProduct.css
+++ b/src/components/CategoriesProduct/CategoriesProduct.css
@@ -7,6 +7,10 @@
     scroll-snap-type: initial;
 }
 
+.categories-title{
+    margin-left: 10px;
+}
+
 
 @media screen and (max-width:800px)  {
     .container-product_card{
